--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.spotfire</groupId>
-	<artifactId>feedback</artifactId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>feedback</name>
+	<name>backend</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
